# perplexity-calculator

./: .gitignore  README.md  benchmark_memory.py  benchmark_time.py  conftest.py  main.py  model.py  perplexity.py  pyproject.toml  test_data.yaml  test_perplexity.py
.github/workflows/: ci.yml
tests/integration/: test_perplexity_integration.py
tests/unit/: test_perplexity.py
typings/onnxruntime_genai/: __init__.pyi
